Added newtonUser optional uuid
