# routes/getJob.js
@@ -5,12 +5,8 @@ function getJob(req, res){
     var token = req.get("Authentication");
     checkToken.checkToken(token, function(authorized, payload){
         if (authorized && payload){
-            var options = {
-                limit : 10,
-                skip : 0
-            }
-
-            req.db.collection('jobs').find({'userId' : getUserId(req.get("Authentication"))}, options).toArray(function(err, docs) {
+            var userId = req.query.newtonUser || getUserId(req.get("Authentication"));
+            req.db.collection('jobs').find({'userId' : userId}).toArray(function(err, docs) {
                 if (err){
                     res.status(500);
                     res.json(err);
