# routes/postJob.js
@@ -36,7 +36,9 @@ function postJob (req, res) {
                             }else{
                                 if (doc[0]){
                                     if (req.get("Authentication")){
-                                        job.userId = getUserId(req.get("Authentication"));
+                                        job.userId = job.newtonUser || getUserId(req.get("Authentication"));
+                                        delete job.newtonUser;
+                                        job.userCloudhub = getUserId(req.get("Authentication"));
                                         job.fablabId = doc[0]._id;
                                         sendJob(req.db, job, doc, 0, function (err, result){
                                             if (err){
